[gd_scene load_steps=3 format=3 uid="uid://do3oy3lqr320g"]

[ext_resource type="Script" uid="uid://cuqedscshbnth" path="res://screens/settingsMenu/settings_menu.gd" id="1_ewieb"]
[ext_resource type="PackedScene" uid="uid://d4c1v5hlv56nk" path="res://input_mapper/input_mapper.tscn" id="2_gcp1t"]

[node name="settingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ewieb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1100.0
offset_bottom = 624.0

[node name="volumes" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 15.0
offset_right = 392.0
offset_bottom = 152.0
scale = Vector2(1.5, 1.5)
alignment = 1

[node name="txt" type="Label" parent="volumes"]
layout_mode = 2
text = "Master"

[node name="master_volume" type="HSlider" parent="volumes"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.5
step = 0.001

[node name="txt2" type="Label" parent="volumes"]
layout_mode = 2
text = "Music"

[node name="music_volume" type="HSlider" parent="volumes"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.5
step = 0.001

[node name="txt3" type="Label" parent="volumes"]
layout_mode = 2
text = "SFX"

[node name="sfx_vol" type="HSlider" parent="volumes"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.5
step = 0.001

[node name="txt4" type="Label" parent="volumes"]
layout_mode = 2
text = "
Accessibility:
Screen Shake:"

[node name="screen_shake" type="Button" parent="volumes"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "On"

[node name="txt5" type="Label" parent="volumes"]
layout_mode = 2
text = "Frame Freeze:"

[node name="frame_freeze" type="Button" parent="volumes"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "On"

[node name="buttons" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 552.0
offset_right = 57.0
offset_bottom = 608.0

[node name="save" type="Button" parent="buttons"]
visible = false
layout_mode = 2
text = "Save"

[node name="load" type="Button" parent="buttons"]
visible = false
layout_mode = 2
text = "Load"

[node name="reset" type="Button" parent="buttons"]
visible = false
layout_mode = 2
text = "Reset
Settings"

[node name="back" type="Button" parent="buttons"]
layout_mode = 2
text = "Back"

[node name="resolutions" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 476.0
offset_top = 15.0
offset_right = 941.0
offset_bottom = 73.0

[node name="text" type="Label" parent="resolutions"]
layout_mode = 2
text = "Resolution:"

[node name="resOptions" type="OptionButton" parent="resolutions"]
unique_name_in_owner = true
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="InputMapper" parent="." instance=ExtResource("2_gcp1t")]
layout_mode = 1
offset_left = 590.0
offset_top = -8.0
offset_right = 590.0
offset_bottom = -8.0

[connection signal="value_changed" from="volumes/master_volume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="volumes/music_volume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="volumes/sfx_vol" to="." method="_on_sfx_vol_value_changed"]
[connection signal="pressed" from="volumes/screen_shake" to="." method="_on_screen_shake_pressed"]
[connection signal="pressed" from="volumes/frame_freeze" to="." method="_on_frame_freeze_pressed"]
[connection signal="pressed" from="buttons/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="buttons/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="buttons/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="buttons/back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="resolutions/resOptions" to="." method="_on_res_options_item_selected"]
